; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mscutils/servman/extr_listview.c_SetListViewStyle.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mscutils/servman/extr_listview.c_SetListViewStyle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GWL_STYLE = common dso_local global i32 0, align 4
@LVS_TYPEMASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SetListViewStyle(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @GWL_STYLE, align 4
  %9 = call i32 @GetWindowLongPtr(i32 %7, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @LVS_TYPEMASK, align 4
  %12 = and i32 %10, %11
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %12, %13
  br i1 %14, label %15, label %25

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @GWL_STYLE, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @LVS_TYPEMASK, align 4
  %20 = xor i32 %19, -1
  %21 = and i32 %18, %20
  %22 = load i32, i32* %5, align 4
  %23 = or i32 %21, %22
  %24 = call i32 @SetWindowLongPtr(i32 %16, i32 %17, i32 %23)
  br label %25

25:                                               ; preds = %15, %2
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @GetWindowLongPtr(i32, i32) #1

declare dso_local i32 @SetWindowLongPtr(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
